--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,25 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: postgresql
+  adapter: mysql2
   database: fuoapp_dev
   pool: 5
   timeout: 5000
+  password: <%= ENV['fuoDB_pwd'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: mysql2
   database: fuoapp_test
   pool: 5
   timeout: 5000
+  password: <%= ENV['fuoDB_pwd'] %>
 
 production:
-  adapter: postgresql
+  adapter: mysql2
   database: fuoapp_production
   pool: 5
   timeout: 5000
+  password: <%= ENV['fuoDB_pwd'] %>
